# Ai-Assistent-Nylas

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: main.py
docs/: 1-project-setup.md
requests/events/: 1804b0f2-3159-11f0-9a4f-a121bae11c9f.json  2222bd2c-3159-11f0-9a4f-a121bae11c9f.json  f647c0c6-3158-11f0-9a4f-a121bae11c9f.json
week 1/: README.md  notebook-introduction.ipynb  openai-quickstart.py
week 2/: 1-python-classes.md  2-chain-of-responsibility-pattern.py  3-strategy-pattern.py  4-adapter-pattern.py  5-structured-output.py  README.md  pydantic-introduction.ipynb
week 2/responses-api/: openai-function-calling.py  openai-structured-ouput.py
week 3/: README.md  e1_pydantic_settings.py
week 3/docker/: requirements.txt
week 4/: 1-extraction.py  2-chunking.py  3-embedding.py  4-search.py  5-reranking.py  README.md
week 5/: 1-langfuse-setup.py  2-unit-test-evals.py  README.md
week-1/: README.md  notebook-introduction.ipynb  openai-quickstart.py  python-venv-check.py  tiktoken-example.py
week-2/: pydantic-ai-introduction.py
week-2/design-patterns/: chain-of-responsibility.py  strategy.py
week-3/celery-tutorial/: README.md  celery_app.py  client.py  tasks.py
week-3/database-setup/: README.md  connect.py  create_table.py
week-3/fastapi-tutorial/: README.md  endpoint.py
week-3/mcp-tutorial/: README.md
week-4/pgvector-setup/: 1-basic-operations.py  2-sqlalchemy-example.py  3-hybrid-search.py  README.md
week-4/rag-introduction/: README.md  embeddings.py
week-4/rag-metrics/: 1-create-data.py  2-setup-pipelines.py  3-run-experiments.py  4-analyze-results.py  README.md  search_pipelines.py
week-4/rag-optimization/: 1-contextual-retrieval.py  1_contextual_retrieval.py  2-query-expansion.py  3-self-query.py  4-cohere-reranking.py  README.md
week-4/rag-pipeline/: README.md  examples.py  query_rag.py  requirements.txt
week-4/vectorization-pipeline/: 1-extraction.py  2-chunking.py  3-embeddings.py  README.md
week-5/evals/: 2-human-annotation.py
week-5/langfuse/: README.md  langfuse-pydantic-ai.py  langfuse-setup.py  prompt-management.py
week-5/security/: 1-pii-removal.py  2-prompt-injection-detection.py  3-check-toxicity.py  README.md
week-5/sentry/: README.md  sentry-setup.py
week-6/: README.md
week-6/caddy/: Caddyfile  README.md
week-6/deployment/: README.md  request.py
week-6/hetzner/: README.md
week-6/sentry/: README.md  (+1 more)
week3/: README.md  e2_fastapi_quickstart.py  e3_test_fastapi.py  e4_database_setup.py
(+24 files in other folders)
