[project]
name = "genai-accelerator-labs"
version = "0.1.0"
description = "Lab exercises for the GenAI Accelerator by Datalumina"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "nylas>=6.9.0",
    "openai>=1.77.0",
    "pydantic-ai>=0.2.3",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "tiktoken>=0.1.1",
    "fastapi>=0.115.12",
    "sqlalchemy>=2.0.41",
    "psycopg2>=2.9.10",
    "celery>=5.5.2",
    "redis>=6.1.0",
    "mcp>=1.8.1",
]
